--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 author: Barrett Yeretzian
-title: Barrett's Data Science Blog
+title: Barrett Yeretzian
 header-img: img/home-bg.png
 email: barrettyeretzian@gmail.com
 copyright_name: Barrett Yeretzian
