--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
 # Site settings
 author: Barrett Yeretzian
 title: Barrett Yeretzian
-header-img: img/home-bg.png
+logo: img/profile-pic.png
 email: barrettyeretzian@gmail.com
 copyright_name: Barrett Yeretzian
-description: > # this means to ignore newlines until "baseurl:"
-  Discussions about my Data Science experience
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username:
 github_username: byeretzian
+theme: jekyll-theme-minimal
 
 # Build settings
 markdown: kramdown
